<resources>
    <string name="app_name">355AppGroupC7</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="choose_your_account_type">Choose your account type</string>
    <string name="coach">Coach</string>
    <string name="athlete">Athlete</string>
    <string name="homepage">Homepage</string>
    <string name="placeholder">placeholder</string>
    <string name="title_activity_athlete_homepage">AthleteHomepage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_coach_homepage">CoachHomepage</string>
    <string name="title_activity_athlete_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string-array name="activity_selection">
        <item>Select a challenge activity</item>
        <item>Time</item>
        <item>Weight</item>
        <item>Reps</item>
        <item>Distance</item>
    </string-array>

    <string name="title_activity_main_challenge_page">MainChallengePage</string>
    <string name="create_a_new_challenge">Create a new challenge</string>
    <string name="my_challenges_coach">My Challenges</string>
    <string name="title_activity_create_challenge">CreateChallenge</string>
    <string name="minimum">Minimum</string>
    <string name="challenge_name">Challenge Name</string>
    <string name="challenge_description">Challenge Description</string>
    <string name="create">Create</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="bio">Bio</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit">Edit</string>
    <string name="defEmail">Email@email.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_past_challenges_details">Past Challenge</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hi">Hi</string>
</resources>
