<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountType"
    android:theme="@style/AppThemeNoTitle"
    android:background="@mipmap/login_background2">



    <Button
        android:id="@+id/AthleteButton"
        android:layout_width="180dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="8dp"
        android:text="@string/athlete"
        android:textColor="@color/themePrimary"
        android:background="@drawable/button_border"
        android:onClick="athlete"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ChooseAccountTypeText" />

    <Button
        android:id="@+id/CoachButton"
        android:layout_width="180dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:text="@string/coach"
        android:textColor="@color/themePrimary"
        android:textSize="18dp"
        android:background="@drawable/button_border"
        android:onClick="coach"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AthleteButton" />

    <TextView
        android:id="@+id/ChooseAccountTypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="8dp"
        android:text="@string/choose_your_account_type"
        android:textSize="24sp"
        android:textColor="@color/themePrimary"
        app:layout_constraintBottom_toTopOf="@+id/AthleteButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>